file (GLOB_RECURSE NNONNX_SRC_FILES CONFIGURE_DEPENDS src/*.cxx)

set (NNONNX_INCLUDE_DIRS "")
list (APPEND NNONNX_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
list (APPEND NNONNX_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/include")
include_directories (${NNONNX_INCLUDE_DIRS})
set (NNONNX_INCLUDE_DIRS "${NNONNX_INCLUDE_DIRS}" CACHE INTERNAL "")

add_library (nnonnx_obj OBJECT ${NNONNX_SRC_FILES})

set_property (TARGET nnonnx_obj PROPERTY POSITION_INDEPENDENT_CODE 1)

if (BUILD_STATIC)
	add_dependencies (nnonnx_obj NNutil)
	add_library (NNonnx STATIC $<TARGET_OBJECTS:nnonnx_obj>)
	set_property (TARGET NNonnx PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
	install (TARGETS NNonnx EXPORT NNTargets DESTINATION lib)
endif ()

add_custom_target (nnonnx_all)

if (BUILD_STATIC)
	set (NNONNX_LIBS ${NNONNX_LIBS} PUBLIC NNonnx)
	add_dependencies (nnonnx_all NNutil NNonnx)
endif()

set (NNONNX_UTAPP "")
if (BUILD_UNITTEST)
	file (GLOB NNONNX_UNITTEST_SRC_FILES CONFIGURE_DEPENDS unittest/*.cxx)
	set (NNONNX_UNITTEST_SRC_FILES ${NNONNX_UNITTEST_SRC_FILES})
	add_executable (ut_nnonnx ${NNONNX_UNITTEST_SRC_FILES} ${UNITTESTMAIN})
	set_property (TARGET ut_nnonnx PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/unittest)
	target_link_libraries (ut_nnonnx ${NN_UTLIBS})
	set (NNONNX_UTAPP ${NNONNX_UTAPP} ut_nnonnx)

	add_dependencies (nnonnx_all ut_nnonnx)

	add_custom_command (OUTPUT run_nnonnx_utapp WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${CMAKE_BINARY_DIR}/unittest/ut_nnonnx)
	add_custom_target (test_nnonnx_ut DEPENDS ut_nnonnx run_nnonnx_utapp)
	add_test( NAME ut_nnonnx COMMAND ${CMAKE_BINARY_DIR}/unittest/ut_nnonnx)
endif()

set (NNONNX_TESTAPP "")
if (NN_BUILD_TEST)
	file (GLOB NNONNX_TESTAPP_SRC_FILES CONFIGURE_DEPENDS test/*.cxx)
	foreach (app ${NNONNX_TESTAPP_SRC_FILES})
		get_filename_component (exe ${app} NAME_WE)
		add_executable (${exe} ${app})
		set_property (TARGET ${exe} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test)
		set (NNONNX_TESTAPP ${NNONNX_TESTAPP} ${exe})
		target_link_libraries (${exe} ${NN_LIBS})
		add_test( NAME ${exe} COMMAND ${CMAKE_BINARY_DIR}/test/${exe})
	endforeach ()

	add_custom_target (nnonnx_test)
	add_dependencies (nnonnx_test ${NNONNX_TESTAPP})
	add_dependencies (nnonnx_all nnonnx_test)
endif()

set (NNONNX_EGAPP "")
if (NN_BUILD_EXAMPLE)
	file (GLOB NNONNX_EXAMPLE_SRC_FILES CONFIGURE_DEPENDS example/*.cxx)
	foreach (app ${NNONNX_EXAMPLE_SRC_FILES})
		get_filename_component (exe ${app} NAME_WE)
		add_executable (${exe} ${app})
		set_property (TARGET ${exe} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/example)
		set (NNONNX_EGAPP ${NNONNX_EGAPP} ${exe})
		target_link_libraries (${exe} ${NN_LIBS})
		add_test( NAME ${exe} COMMAND ${CMAKE_BINARY_DIR}/example/${exe})
	endforeach ()

	add_custom_target (nnonnx_example)
	add_dependencies (nnonnx_example ${NNONNX_EGAPP})
	add_dependencies (nnonnx_all nnonnx_example)
endif ()

if (NN_INSTALL_APP)
	install (TARGETS ${NNONNX_UTAPP} RUNTIME DESTINATION unittest)
	install (TARGETS ${NNONNX_BMAPP} RUNTIME DESTINATION bench)
	install (TARGETS ${NNONNX_TESTAPP} RUNTIME DESTINATION test)
	install (TARGETS ${NNONNX_EGAPP} RUNTIME DESTINATION example)
endif ()