file (GLOB_RECURSE NNONNX2AIR_SRC_FILES CONFIGURE_DEPENDS src/*.cxx)
file (GLOB_RECURSE NNPROTO_SRC_FILES CONFIGURE_DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/*.cc)

set (NNONNX2AIR_INCLUDE_DIRS "")
list (APPEND NNONNX2AIR_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
list (APPEND NNONNX2AIR_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/include")
list (APPEND NNPROTO_INCLUDE_DIRS "${CMAKE_CURRENT_BINARY_DIR}")
include_directories (${NNONNX2AIR_INCLUDE_DIRS} ${NNPROTO_INCLUDE_DIRS})
set (NNONNX2AIR_INCLUDE_DIRS "${NNONNX2AIR_INCLUDE_DIRS}" CACHE INTERNAL "")

add_library (nnonnx2air_obj OBJECT ${NNONNX2AIR_SRC_FILES} ${NNPROTO_SRC_FILES})

set_property (TARGET nnonnx2air_obj PROPERTY POSITION_INDEPENDENT_CODE 1)

if (BUILD_STATIC)
	add_dependencies (nnonnx2air_obj NNutil NNonnx)
	add_library (NNonnx2air STATIC $<TARGET_OBJECTS:nnonnx2air_obj>)
	set_property (TARGET NNonnx2air PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
	install (TARGETS NNonnx2air EXPORT NNTargets DESTINATION lib)
endif ()

add_custom_target (nnonnx2air_all)

if (BUILD_STATIC)
	set (NNONNX2AIR_LIBS ${NNONNX2AIR_LIBS} PUBLIC NNonnx2air)
	add_dependencies (nnonnx2air_all NNonnx2air)
endif()

set (NNONNX2AIR_UTAPP "")
if (BUILD_UNITTEST)
	file (GLOB NNONNX2AIR_UNITTEST_SRC_FILES CONFIGURE_DEPENDS unittest/*.cxx)
	set (NNONNX2AIR_UNITTEST_SRC_FILES ${NNONNX2AIR_UNITTEST_SRC_FILES})
	add_executable (ut_nnonnx2air ${NNONNX2AIR_UNITTEST_SRC_FILES} ${UNITTESTMAIN})
	set_property (TARGET ut_nnonnx2air PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/unittest)
	target_link_libraries (ut_nnonnx2air ${NN_UTLIBS})
	set (NNONNX2AIR_UTAPP ${NNONNX2AIR_UTAPP} ut_nnonnx2air)

	add_dependencies (nnonnx2air_all ut_nnonnx2air)

	add_custom_command (OUTPUT run_nnonnx2air_utapp WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${CMAKE_BINARY_DIR}/unittest/ut_nnonnx2air)
	add_custom_target (test_nnonnx2air_ut DEPENDS ut_nnonnx2air run_nnonnx2air_utapp)
	add_test( NAME ut_nnonnx2air COMMAND ${CMAKE_BINARY_DIR}/unittest/ut_nnonnx2air)
endif()

set (NNONNX2AIR_TESTAPP "")
if (NN_BUILD_TEST)
	file (GLOB NNONNX2AIR_TESTAPP_SRC_FILES CONFIGURE_DEPENDS test/*.cxx)
	foreach (app ${NNONNX2AIR_TESTAPP_SRC_FILES})
		get_filename_component (exe ${app} NAME_WE)
		add_executable (${exe} ${app})
		set_property (TARGET ${exe} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test)
		set (NNONNX2AIR_TESTAPP ${NNONNX2AIR_TESTAPP} ${exe})
		target_link_libraries (${exe} ${NN_LIBS} ${EXTRA_LIBS})
		add_test( NAME ${exe} COMMAND ${CMAKE_BINARY_DIR}/test/${exe})
	endforeach ()

	add_custom_target (nnonnx2air_test)
	add_dependencies (nnonnx2air_test ${NNONNX2AIR_TESTAPP})
	add_dependencies (nnonnx2air_all nnonnx2air_test)
endif()

set (NNONNX2AIR_EGAPP "")
if (NN_BUILD_EXAMPLE)
	file (GLOB NNONNX2AIR_EXAMPLE_SRC_FILES CONFIGURE_DEPENDS example/*.cxx)
	foreach (app ${NNONNX2AIR_EXAMPLE_SRC_FILES})
		get_filename_component (exe ${app} NAME_WE)
		add_executable (${exe} ${app})
		set_property (TARGET ${exe} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/example)
		set (NNONNX2AIR_EGAPP ${NNONNX2AIR_EGAPP} ${exe})
		target_link_libraries (${exe} ${NN_LIBS})
		add_test( NAME ${exe} COMMAND ${CMAKE_BINARY_DIR}/example/${exe})
	endforeach ()

	add_custom_target (nnonnx2air_example)
	add_dependencies (nnonnx2air_example ${NNONNX2AIR_EGAPP})
	add_dependencies (nnonnx2air_all nnonnx2air_example)
endif ()

if (NN_INSTALL_APP)
	install (TARGETS ${NNONNX2AIR_UTAPP} RUNTIME DESTINATION unittest)
	install (TARGETS ${NNONNX2AIR_BMAPP} RUNTIME DESTINATION bench)
	install (TARGETS ${NNONNX2AIR_TESTAPP} RUNTIME DESTINATION test)
	install (TARGETS ${NNONNX2AIR_EGAPP} RUNTIME DESTINATION example)
endif ()
