file (GLOB_RECURSE NNOPT_SRC_FILES CONFIGURE_DEPENDS src/*.cxx)

set (NNOPT_INCLUDE_DIRS "")
list (APPEND NNOPT_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
list (APPEND NNOPT_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/include")
include_directories (${NNOPT_INCLUDE_DIRS})
set (NNOPT_INCLUDE_DIRS "${NNOPT_INCLUDE_DIRS}" CACHE INTERNAL "")

add_library (nnopt_obj OBJECT ${NNOPT_SRC_FILES})

set_property (TARGET nnopt_obj PROPERTY POSITION_INDEPENDENT_CODE 1)

if (BUILD_STATIC)
	add_dependencies (nnopt_obj NNutil)
	add_library (NNopt STATIC $<TARGET_OBJECTS:nnopt_obj>)
	set_property (TARGET NNopt PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
	install (TARGETS NNopt EXPORT NNTargets DESTINATION lib)
endif ()

add_custom_target (nnopt_all)

if (BUILD_STATIC)
	set (NNOPT_LIBS ${NNOPT_LIBS} PUBLIC NNutil NNopt)
	add_dependencies (nnopt_all NNutil NNopt)
endif()

set (NNOPT_UTAPP "")
if (BUILD_UNITTEST)
	file (GLOB NNOPT_UNITTEST_SRC_FILES CONFIGURE_DEPENDS unittest/*.cxx)
	set (NNOPT_UNITTEST_SRC_FILES ${NNOPT_UNITTEST_SRC_FILES})
	add_executable (ut_nnopt ${NNOPT_UNITTEST_SRC_FILES} ${UNITTESTMAIN})
	set_property (TARGET ut_nnopt PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/unittest)
	target_link_libraries (ut_nnopt ${NN_UTLIBS})
	set (NNOPT_UTAPP ${NNOPT_UTAPP} ut_nnopt)

	add_dependencies (nnopt_all ut_nnopt)

	add_custom_command (OUTPUT run_nnopt_utapp WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${CMAKE_BINARY_DIR}/unittest/ut_nnopt)
	add_custom_target (test_nnopt_ut DEPENDS ut_nnopt run_nnopt_utapp)
	add_test( NAME ut_nnopt COMMAND ${CMAKE_BINARY_DIR}/unittest/ut_nnopt)
endif()

set (NNOPT_TESTAPP "")
if (NN_BUILD_TEST)
	file (GLOB NNOPT_TESTAPP_SRC_FILES CONFIGURE_DEPENDS test/*.cxx)
	foreach (app ${NNOPT_TESTAPP_SRC_FILES})
		get_filename_component (exe ${app} NAME_WE)
		add_executable (${exe} ${app})
		set_property (TARGET ${exe} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test)
		set (NNOPT_TESTAPP ${NNOPT_TESTAPP} ${exe})
		target_link_libraries (${exe} ${NN_LIBS})
		add_test( NAME ${exe} COMMAND ${CMAKE_BINARY_DIR}/test/${exe})
	endforeach ()

	add_custom_target (nnopt_alltest)
	add_dependencies (nnopt_alltest ${NNOPT_TESTAPP})
	add_dependencies (nnopt_all nnopt_alltest)
endif()

set (NNOPT_EGAPP "")
if (NN_BUILD_EXAMPLE)
	file (GLOB NNOPT_EXAMPLE_SRC_FILES CONFIGURE_DEPENDS example/*.cxx)
	foreach (app ${NNOPT_EXAMPLE_SRC_FILES})
		get_filename_component (exe ${app} NAME_WE)
		add_executable (${exe} ${app})
		set_property (TARGET ${exe} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/example)
		set (NNOPT_EGAPP ${NNOPT_EGAPP} ${exe})
		target_link_libraries (${exe} ${NN_LIBS})
		add_test( NAME ${exe} COMMAND ${CMAKE_BINARY_DIR}/example/${exe})
	endforeach ()

	add_custom_target (nnopt_example)
	add_dependencies (nnopt_example ${NNOPT_EGAPP})
	add_dependencies (nnopt_all nnopt_example)
endif ()

if (NN_INSTALL_APP)
	install (TARGETS ${NNOPT_UTAPP} RUNTIME DESTINATION unittest)
	install (TARGETS ${NNOPT_BMAPP} RUNTIME DESTINATION bench)
	install (TARGETS ${NNOPT_TESTAPP} RUNTIME DESTINATION test)
	install (TARGETS ${NNOPT_EGAPP} RUNTIME DESTINATION example)
endif ()